--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/gemini-cli": "^0.1.21",
     "@langchain/langgraph": "^0.4.2",
+    "@langchain/openai": "^0.6.7",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
